@@ -62,7 +62,7 @@ struct fuse *fuse_setup_compat25(int argc, char *argv[],
                                  size_t op_size, char **mountpoint,
                                  int *multithreaded, int *fd);
 
-void fuse_teardown_compat25(struct fuse *fuse, int fd, char *mountpoint);
+void fuse_teardown_compat22(struct fuse *fuse, int fd, char *mountpoint);
 
 #ifndef __FreeBSD__
 #include <sys/statfs.h>
