@@ -331,6 +331,7 @@ int fuse_main_real(int argc, char *argv[], const struct fuse_operations *op,
 }
 
 #undef fuse_main
+int fuse_main(void);
 int fuse_main(void)
 {
     fprintf(stderr, "fuse_main(): This function does not exist\n");
